nodemailer integrated in project for contact us page and forget password

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#women">Women</a></li>
                 <li><a href="#sale">Sale</a></li>
                 <li><a href="#about">About Us</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li class="cart"><a href="#cart">🛒 Cart</a></li>
                 <li class="auth"><a href="signin.html">Login / Sign Up</a></li>
             </ul>
