complete project with backend integrated in it

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,10 @@
                 <li><a href="#sale">Sale</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li class="cart"><a href="#cart">🛒 Cart</a></li>
+                <li class="cart"><a href="#cart">🛒 Cart</a><span class="cart-count"></span></li>
                 <li class="auth"><a href="signin.html">Login / Sign Up</a></li>
             </ul>
+            <div class="cart-dropdown"></div>
         </nav>
     </header>
     
@@ -47,6 +48,70 @@
                 <p>Discover trendy and elegant women's apparel that suits every occasion.</p>
             </div>
         </a>
+    </section>
+
+    <section id="men-collection" class="collection">
+        <h2>Men's Collection</h2>
+        <div class="product">
+            <img src="men shoes.jpeg" alt="Men's Shoes">
+            <h3>Men's Shoes</h3>
+            <p>$49.99</p>
+            <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="product">
+            <img src="men tshirt.jpeg" alt="Men's T-Shirt">
+            <h3>Men's T-Shirt</h3>
+            <p>$29.99</p>
+            <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="product">
+            <img src="men zipperr.jpg" alt="Men's Zipper">
+            <h3>Men's Zipper</h3>
+            <p>$59.99</p>
+            <button class="add-to-cart">Add to Cart</button>
+        </div>
+    </section>
+
+    <section id="women-collection" class="collection">
+        <h2>Women's Collection</h2>
+        <div class="product">
+            <img src="women hoodies.jpeg" alt="Women's Hoodie">
+            <h3>Women's Hoodie</h3>
+            <p>$39.99</p>
+            <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="product">
+            <img src="women shoes.jpeg" alt="Women's Shoes">
+            <h3>Women's Shoes</h3>
+            <p>$49.99</p>
+            <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="product">
+            <img src="women zipper.jpeg" alt="Women's Zipper">
+            <h3>Women's Zipper</h3>
+            <p>$59.99</p>
+            <button class="add-to-cart">Add to Cart</button>
+        </div>
+    </section>
+
+    <section id="best-selling" class="collection">
+        <h2>Best Selling Products</h2>
+        <div class="product">
+            <img src="unisex hoodie.jpeg" alt="Unisex Hoodie">
+            <h3>Unisex Hoodie</h3>
+            <p>$49.99</p>
+            <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="product">
+            <img src="unisex jacket.jpeg" alt="Unisex Jacket">
+            <h3>Unisex Jacket</h3>
+            <p>$79.99</p>
+            <button class="add-to-cart">Add to Cart</button>
+        </div>
+    </section>
+
+    <section id="cart" class="cart-section">
+        <div id="cart-container"></div>
     </section>
 
     <section id="about" class="about-us">
